--- a/lime/public/mix-manifest.json
+++ b/lime/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/bootstrap.js": "/js/bootstrap.js",
+    "/js/home.js": "/js/home.js",
+    "/css/home.css": "/css/home.css",
     "/css/app.css": "/css/app.css"
 }
