--- a/lime/public/mix-manifest.json
+++ b/lime/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/app.js": "/js/app.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
     "/js/home.js": "/js/home.js",
+    "/js/tes.js": "/js/tes.js",
     "/css/home.css": "/css/home.css",
     "/css/app.css": "/css/app.css"
 }
