--- a/lime/package.json
+++ b/lime/package.json
@@ -16,7 +16,10 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "common": "^0.2.5",
+        "csv-parse": "^5.0.3",
         "glob": "^7.1.7",
-        "jquery": "^3.6.0"
+        "jquery": "^3.6.0",
+        "slick-carousel": "^1.8.1"
     }
 }
